@@ -10,7 +10,7 @@ homepage = http://genehack.github.com/app-gitgot/
 
 [Prereqs]
 Git::Wrapper=0.042
-List::AllUtils=0.09
+List::Util=1.45
 Moo=2.000000
 MooX::HandlesVia=0.001008
 Path::Tiny=0.072
