@@ -1,6 +1,7 @@
 Changes file for {{$dist->name}}
 
 {{$NEXT}}
+  * switch from using List::AllUtils to List::Util (Karen Etheridge)
 
 1.333     2016-04-22 09:47:11-07:00 America/Los_Angeles
 
